--- a/LoginSystem/Loginify/templates/Loginify/signup.html
+++ b/LoginSystem/Loginify/templates/Loginify/signup.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up</title>
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 80vh;
+        }
+        .container {
+            background: aliceblue;
+            padding: 20px;
+            border-radius: 8px;
+            width: 300px;
+        }
+        h1 {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        form {
+            display: flex;
+            flex-direction: column;
+        }
+        button {
+            padding: 10px;
+            border: none;
+            background-color: rgb(0, 46, 114);
+            color: #fff;
+            font-size: 16px;
+            border-radius: 5px;
+            margin-top: 10px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+    </style>
 </head>
 <body>
+    <div class="container">
     <h1>Sign Up Form</h1>
     <form method="post" enctype="multipart/form-data">
         {% csrf_token %}
@@ -13,5 +48,6 @@
         <button type="submit">Submit</button>
 
     </form>
+</div>
 </body>
 </html>
